drkns 23.06.2016 22:46:27 +0200 - build 4722

1. Уточнение 4710.

drkns 23.06.2016 21:09:03 +0200 - build 4721

1. Новый параметр: far:config -> System.Executor.Comspec, определяет используемый командный процессор (по умолчанию %comspec%).

2. В System.Executor.ComspecArguments и System.Executor.ComspecCondition поддерживаются переменные окружения.

drkns 21.06.2016 21:33:36 +0200 - build 4720

1. Продолжение 4712.

2. gcc warning.

drkns 20.06.2016 00:20:17 +0200 - build 4719

1. Переменные в ExcludeCmds не разворачивались при использовании в автодополнении.

drkns 20.06.2016 00:15:19 +0200 - build 4718

1. #0003257: (far 3.0.4700.x64) Исключительная ситуация во Viewer при поиске HEX-значений

t-rex 19.06.2016 21:15:20 +0200 - build 4717

1. Mantis#2467: Застряёт регэксп поиск с заменой в редакторе

2. Не собиралось почему то в VC2015 update 3 (вроде баг в последнем)

drkns 18.06.2016 18:09:29 +0200 - build 4716

1. Уточнение 4715.

drkns 18.06.2016 13:55:55 +0200 - build 4715

1. С форума: неверная прорисовка часов с учетом региональных настроек.

drkns 18.06.2016 12:52:50 +0200 - build 4714

1. С форума: после копирования или переноса исчезают значки жестких ссылок на пассивной панели.

drkns 18.06.2016 11:51:33 +0200 - build 4713

1. Обход бага выхода из полноэкранного режима в Windows 10.

drkns 17.06.2016 22:38:32 +0200 - build 4712

1. Частичный откат предыдущих экспериментов с режимами консоли.

2. WindowMode расширен: добавлены два дополнительных параметра StickyX (по умолчанию true) и StickyY (по умолчанию false),
   определяющие, к каким осям должен подстраиваться размер (и где, соответственно, должны отсутствовать полосы прокрутки).

drkns 17.06.2016 17:44:53 +0200 - build 4711

1. Пара глюков WindowMode.

drkns 17.06.2016 15:12:33 +0200 - build 4710

1. Восстановим работоспособность в Win2k.

w17 16.06.2016 19:27:33 +0300 - build 4709

1. Снова уточнение 4697.