@@ -1,3 +1,7 @@
+drkns 24.06.2016 01:15:01 +0200 - build 4723
+
+1. Очень экспериментальная фича: встроенные ассоциации распространяются на комстроку.
+
 drkns 23.06.2016 22:46:27 +0200 - build 4722
 
 1. Уточнение 4710.
